@@ -2,6 +2,7 @@ phpSysInfo 3.1.6
 
  - [ADD] Porteus, Peppermint, Manjaro, Netrunner and Salix to detected distros
  - [ADD] Show CPU frequency max for WINNT
+ - [ADD] Show network interfaces infos for Darwin (Mac OS X)
   
  - [UPD] SNMPPInfo plugin, ink level for some of the data
  - [UPD] jQuery 2.0.3 and jQuery 1.10.2
